--- a/dashboard.html
+++ b/dashboard.html
@@ -24,10 +24,10 @@
                         <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="/User.html"><span class="las la-users"></span>
+                    <a href="User.html"><span class="las la-users"></span>
                         <span>Users</span></a>
                 </li>
-                <li><a href="/Product.html"><span class="las la-clipboard-list"></span> 
+                <li><a href="Product.html"><span class="las la-clipboard-list"></span> 
                     <span>Products</span></a>
                 </li>
                 <li><a href="#"><span class="las la-shopping-bag"></span> 
@@ -39,10 +39,10 @@
                 <li><a href="#"><span class="las la-chart-bar"></span> 
                     <span>Reports</span></a>
                 </li>
-                <li><a href="/myaccount.html"><span class="las la-wallet"></span> 
+                <li><a href="myaccount.html"><span class="las la-wallet"></span> 
                     <span>Payment</span></a>
                 </li>
-                <li><a href="/index.html"><span class="las la-sign-out-alt"></span>
+                <li><a href="index.html"><span class="las la-sign-out-alt"></span>
                     <span> Logout</span></a>
                 </li>
             </ul>
@@ -99,7 +99,7 @@
             <div class="card-single">
                 <div>
                     <h1>5</h1>
-                    <a href="/Product.html"> <span>Products</span></a>
+                    <a href="Product.html"> <span>Products</span></a>
                 </div>
                 <div>
                     <span class="las la-shopping-bag"></span>
