--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="navbar-nav">
             <ul>
                  <li><a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
-                 <li><a class="nav-link" href="Myaccount.html">My Account</a> </li>
+                 <li><a class="nav-link" href="/Myaccount.html">My Account</a> </li>
                  <li><a class="nav-link" href="/karibu-Groceries/dashboard.html">Dashboard</a></li>
                  <li><a class="nav-link" href="#">About</a></li>
                  <li><a class="nav-link" href="#">Contact</a></li>
