add all changes

--- a/Myaccount.html
+++ b/Myaccount.html
@@ -94,7 +94,7 @@
     <input type="password" placeholder="Confirm Password"> <br>
     <button type="submit"> Update Account</button><br><br>
 
-    <span> Already have an account? <a href="/index.html">Login</a></span>
+    <span> Already have an account? <a href="/Main_karibu-groceries/index.html">Login</a></span>
    </div>
 
     
