--- a/Product.html
+++ b/Product.html
@@ -22,10 +22,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="dashboard.html"><span class="las la-arrow-left"></span> Dashboard</a>
+                            <a class="nav-link" href="/Main_karibu-groceries/dashboard.html"><span class="las la-arrow-left"></span> Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html"><span class="las la-home"></span> Home</a>
+                            <a class="nav-link" href="/Main_karibu-groceries/index.html"><span class="las la-home"></span> Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html"><span class="las la-info"></span> About</a>
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="terms_of_service.html"><span class="las la-file-alt"></span> Terms of Service</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="logout.html"><span class="las la-sign-out-alt"></span> Logout</a>
+                            <a class="nav-link" href="/Main_karibu-groceries/index.html"><span class="las la-sign-out-alt"></span> Logout</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="cart.html"><span class="las la-shopping-cart"></span> Cart</a>
