--- a/dashboard.html
+++ b/dashboard.html
@@ -24,10 +24,10 @@
                         <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="User.html"><span class="las la-users"></span>
+                    <a href="/Main_karibu-groceries/User.html"><span class="las la-users"></span>
                         <span>Users</span></a>
                 </li>
-                <li><a href="Product.html"><span class="las la-clipboard-list"></span> 
+                <li><a href="/Main_karibu-groceries/Product.html"><span class="las la-clipboard-list"></span> 
                     <span>Products</span></a>
                 </li>
                 <li><a href="#"><span class="las la-shopping-bag"></span> 
@@ -39,7 +39,7 @@
                 <li><a href="#"><span class="las la-chart-bar"></span> 
                     <span>Reports</span></a>
                 </li>
-                <li><a href="myaccount.html"><span class="las la-wallet"></span> 
+                <li><a href="/Main_karibu-groceries/Myaccount.html"><span class="las la-wallet"></span> 
                     <span>Payment</span></a>
                 </li>
                 <li><a href="index.html"><span class="las la-sign-out-alt"></span>
