--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <div class="navbar-nav">
             <ul>
                  <li><a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
-                 <li><a class="nav-link" href="/Myaccount.html">My Account</a> </li>
-                 <li><a class="nav-link" href="/karibu-Groceries/dashboard.html"> Dashboard</a></li>
+                 <li><a class="nav-link" href="/Main_karibu-groceries/Myaccount.html">My Account</a> </li>
+                 <li><a class="nav-link" href="/Main_karibu-groceries/dashboard.html"> Dashboard</a></li>
                  <li><a class="nav-link" href="#">About</a></li>
                  <li><a class="nav-link" href="#">Contact</a></li>
              </ul>
@@ -39,7 +39,7 @@
             </div>
             <div class="remember-forgot">
               <label> <input type="checkbox"> Remember Me</label>
-              <a href="/myaccount.html">Forgot Password?</a>
+              <a href="/Main_karibu-groceries/Myaccount.html">Forgot Password?</a>
             </div>
 
               <button type="submit" class="btn">Login</button>
