--- a/User.html
+++ b/User.html
@@ -171,7 +171,7 @@
 
         </div>
 
-      <button type="submit" style="background: #ec35a0; border-radius: 4px; width: 60px; height: 40px; padding-right: 5px;" ><a href="/dashboard.html">Submit </a></button>
+      <button type="submit" style="background: #ec35a0; border-radius: 4px; width: 60px; height: 40px; padding-right: 5px;" ><a href="/Main_karibu-groceries/dashboard.html">Submit </a></button>
 
     </main>
 </body>
