--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="remember-forgot">
               <label> <input type="checkbox"> Remember Me</label>
-              <a href="/Main_karibu-groceries/Myaccount.html">Forgot Password?</a>
+              <a href="/Main_karibu-groceries /Myaccount.html">Forgot Password?</a>
             </div>
 
               <button type="submit" class="btn">Login</button>
